Change version, add description.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "oneiros"
-version = "0.1.0"
+version = "0.0.0"
 edition = "2024"
+description = "A sqlite-based cognition kit for long-term agent language models."
 
 [dependencies]
