feat: Project detection
We were letting a CLI user name the project they were in. We still want
names, of course, but we'd like to automatically determine the project
we're in. Those should be separate. This does away with names (for now?)
and drops in a project detection crate that can go in this order of
resolution:

- Cargo workspace
- Cargo package
- Git repo
- Directory name (current one)

--- a/crates/oneiros/Cargo.toml
+++ b/crates/oneiros/Cargo.toml
@@ -18,6 +18,7 @@ clap.workspace = true
 clap-verbosity-flag.workspace = true
 colorchoice-clap.workspace = true
 directories.workspace = true
+oneiros-detect-project-name = { path = "../oneiros-detect-project-name" }
 rusqlite.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
