--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ directories = "5"
 rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+tempfile = "3"
 thiserror = "2"
 tokio = { version = "1", features = ["full"] }
 toml = "0.8"
