--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,17 @@ clap = { version = "4", features = ["derive"] }
 clap-verbosity-flag = "3"
 colorchoice-clap = "1.0.7"
 directories = "5"
-rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
+inquire = "0.7"
+oneiros-db = { path = "crates/oneiros-db" }
+oneiros-detect-project-name = { path = "crates/oneiros-detect-project-name" }
+oneiros-fs = { path = "crates/oneiros-fs" }
+oneiros-terminal = { path = "crates/oneiros-terminal" }
+rusqlite = { version = "0.31", features = [
+  "bundled",
+  "functions",
+  "serde_json",
+  "uuid"
+] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tempfile = "3"
@@ -26,7 +36,8 @@ tokio = { version = "1", features = ["full"] }
 toml = "0.8"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
-uuid = { version = "1", features = ["serde", "v4"] }
+uuid = { version = "1", features = ["serde", "v4", "v7"] }
+whoami = "1"
 
 # The profile that 'dist' will build with
 [profile.dist]
