--- a/crates/oneiros/Cargo.toml
+++ b/crates/oneiros/Cargo.toml
@@ -18,9 +18,18 @@ clap.workspace = true
 clap-verbosity-flag.workspace = true
 colorchoice-clap.workspace = true
 directories.workspace = true
-oneiros-detect-project-name = { path = "../oneiros-detect-project-name" }
-rusqlite.workspace = true
+inquire.workspace = true
+oneiros-db.workspace = true
+oneiros-detect-project-name.workspace = true
+oneiros-fs.workspace = true
+oneiros-terminal.workspace = true
+serde.workspace = true
+serde_json.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+uuid.workspace = true
+
+[dev-dependencies]
+tempfile.workspace = true
