feat: oneiros project init
Adds `project init` command.

This is a pretty big update because it actually requires the service
command backing it, in order to run with the correct model. So, all of
the plumbing had to come along with it.

Right now the service is a manual, non-daemonized version of itself.
We'll come back around to update it later, but it seemed like this was
already a lot of work, so we punt for now.

Some other notable updates:

- We have a model package.
- We nudge the errors around a bit, including context failures.

--- a/crates/oneiros/Cargo.toml
+++ b/crates/oneiros/Cargo.toml
@@ -19,10 +19,13 @@ clap-verbosity-flag.workspace = true
 colorchoice-clap.workspace = true
 directories.workspace = true
 inquire.workspace = true
+oneiros-client.workspace = true
 oneiros-db.workspace = true
 oneiros-detect-project-name.workspace = true
 oneiros-fs.workspace = true
+oneiros-model.workspace = true
 oneiros-outcomes.workspace = true
+oneiros-service.workspace = true
 oneiros-terminal.workspace = true
 serde.workspace = true
 serde_json.workspace = true
