--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,16 +12,23 @@ license = "MIT"
 
 [workspace.dependencies]
 anstream = "0.6.21"
+axum = "0.8.8"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
 clap-verbosity-flag = "3"
 colorchoice-clap = "1.0.7"
 directories = "5"
+http-body-util = "0.1.3"
+hyper = { version = "1.8", features = ["full"] }
+hyper-util = { version = "0.1.20", features = ["tokio"] }
 inquire = "0.7"
+oneiros-client = { path = "crates/oneiros-client" }
 oneiros-db = { path = "crates/oneiros-db" }
 oneiros-detect-project-name = { path = "crates/oneiros-detect-project-name" }
 oneiros-fs = { path = "crates/oneiros-fs" }
+oneiros-model = { path = "crates/oneiros-model" }
 oneiros-outcomes = { path = "crates/oneiros-outcomes" }
+oneiros-service = { path = "crates/oneiros-service" }
 oneiros-terminal = { path = "crates/oneiros-terminal" }
 rusqlite = { version = "0.31", features = [
   "bundled",
@@ -35,6 +42,7 @@ tempfile = "3"
 thiserror = "2"
 tokio = { version = "1", features = ["full"] }
 toml = "0.8"
+tower = { version = "0.5.3", features = ["util"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 uuid = { version = "1", features = ["serde", "v4", "v7"] }
