--- a/crates/oneiros-outcomes/Cargo.toml
+++ b/crates/oneiros-outcomes/Cargo.toml
@@ -7,6 +7,7 @@ license.workspace = true
 publish = false
 
 [dependencies]
+oneiros-outcomes-derive.workspace = true
 tracing.workspace = true
 
 [dev-dependencies]
