--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ clap-verbosity-flag = "3"
 colorchoice-clap = "1.0.7"
 data-encoding = "2"
 directories = "5"
+flate2 = "1"
 http-body-util = "0.1.3"
 hyper = { version = "1.8", features = ["full"] }
 hyper-util = { version = "0.1.20", features = ["tokio"] }
@@ -45,6 +46,7 @@ rusqlite = { version = "0.31", features = [
 ] }
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
+sha2 = "0.10"
 syn = { version = "2", features = ["extra-traits", "full", "parsing"] }
 tempfile = "3"
 thiserror = "2"
