--- a/crates/oneiros-service/Cargo.toml
+++ b/crates/oneiros-service/Cargo.toml
@@ -10,6 +10,8 @@ publish = false
 [dependencies]
 axum.workspace = true
 chrono.workspace = true
+data-encoding.workspace = true
+flate2.workspace = true
 hyper.workspace = true
 hyper-util.workspace = true
 oneiros-client.workspace = true
@@ -18,6 +20,7 @@ oneiros-fs.workspace = true
 oneiros-model.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+sha2.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
