--- a/crates/oneiros/Cargo.toml
+++ b/crates/oneiros/Cargo.toml
@@ -29,6 +29,7 @@ oneiros-service.workspace = true
 oneiros-terminal.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+service-manager.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
