--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,6 +46,7 @@ rusqlite = { version = "0.31", features = [
 ] }
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
+service-manager = "0.10"
 sha2 = "0.10"
 syn = { version = "2", features = ["extra-traits", "full", "parsing"] }
 tempfile = "3"
