--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ license = "MIT"
 
 [workspace.dependencies]
 anstream = "0.6.21"
+askama = "0.15"
 axum = "0.8.8"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
@@ -32,6 +33,7 @@ oneiros-model = { path = "crates/oneiros-model" }
 oneiros-outcomes = { path = "crates/oneiros-outcomes" }
 oneiros-outcomes-derive = { path = "crates/oneiros-outcomes-derive" }
 oneiros-service = { path = "crates/oneiros-service" }
+oneiros-templates = { path = "crates/oneiros-templates" }
 oneiros-terminal = { path = "crates/oneiros-terminal" }
 postcard = { version = "1", features = ["alloc"] }
 pretty_assertions = "1"
