--- a/crates/oneiros/Cargo.toml
+++ b/crates/oneiros/Cargo.toml
@@ -25,6 +25,7 @@ oneiros-fs.workspace = true
 oneiros-model.workspace = true
 oneiros-outcomes.workspace = true
 oneiros-service.workspace = true
+oneiros-templates.workspace = true
 oneiros-terminal.workspace = true
 serde.workspace = true
 serde_json.workspace = true
