--- a/crates/oneiros-fs/Cargo.toml
+++ b/crates/oneiros-fs/Cargo.toml
@@ -2,7 +2,7 @@
 name = "oneiros-fs"
 version.workspace = true
 edition.workspace = true
-description = "Common file system operations"
+description = "Thin wrapper for common oneiros file system operations"
 repository.workspace = true
 license.workspace = true
 
