--- a/crates/oneiros-model/Cargo.toml
+++ b/crates/oneiros-model/Cargo.toml
@@ -2,7 +2,7 @@
 name = "oneiros-model"
 version.workspace = true
 edition.workspace = true
-description = "Shared domain types for the oneiros system: models, events, values, and projections."
+description = "Shared domain types for oneiros"
 repository.workspace = true
 license.workspace = true
 
