Remove release from release-plz.
We do want the tag but we want dist to take over the release part.

--- a/release-plz.toml
+++ b/release-plz.toml
@@ -5,5 +5,5 @@ git_release_enable = false
 [[package]]
 name = "oneiros"
 git_tag_enable = true
-git_release_enable = true
+git_release_enable = false
 git_tag_name = "v{{ version }}"
