--- a/crates/oneiros-client/Cargo.toml
+++ b/crates/oneiros-client/Cargo.toml
@@ -11,6 +11,7 @@ http-body-util.workspace = true
 hyper.workspace = true
 hyper-util.workspace = true
 oneiros-model.workspace = true
+oneiros-protocol.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
