--- a/crates/oneiros-service/Cargo.toml
+++ b/crates/oneiros-service/Cargo.toml
@@ -11,10 +11,10 @@ axum.workspace = true
 chrono.workspace = true
 data-encoding.workspace = true
 flate2.workspace = true
-oneiros-client.workspace = true
 oneiros-db.workspace = true
 oneiros-fs.workspace = true
 oneiros-model.workspace = true
+oneiros-protocol.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 sha2.workspace = true
