--- a/crates/oneiros-db/Cargo.toml
+++ b/crates/oneiros-db/Cargo.toml
@@ -7,6 +7,8 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+chrono.workspace = true
+oneiros-model.workspace = true
 rusqlite.workspace = true
 serde.workspace = true
 serde_json.workspace = true
