--- a/crates/oneiros-model/Cargo.toml
+++ b/crates/oneiros-model/Cargo.toml
@@ -11,5 +11,9 @@ chrono.workspace = true
 data-encoding.workspace = true
 postcard.workspace = true
 serde.workspace = true
+sha2.workspace = true
 thiserror.workspace = true
 uuid.workspace = true
+
+[dev-dependencies]
+serde_json.workspace = true
