--- a/crates/oneiros-service/Cargo.toml
+++ b/crates/oneiros-service/Cargo.toml
@@ -15,6 +15,7 @@ oneiros-db.workspace = true
 oneiros-fs.workspace = true
 oneiros-model.workspace = true
 oneiros-protocol.workspace = true
+postcard.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 sha2.workspace = true
