--- a/crates/oneiros/Cargo.toml
+++ b/crates/oneiros/Cargo.toml
@@ -23,11 +23,13 @@ oneiros-db.workspace = true
 oneiros-detect-project-name.workspace = true
 oneiros-fs.workspace = true
 oneiros-model.workspace = true
+oneiros-protocol.workspace = true
 oneiros-outcomes.workspace = true
 oneiros-service.workspace = true
 oneiros-skill.workspace = true
 oneiros-templates.workspace = true
 oneiros-terminal.workspace = true
+postcard.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 service-manager.workspace = true
