--- a/crates/oneiros/Cargo.toml
+++ b/crates/oneiros/Cargo.toml
@@ -24,6 +24,7 @@ oneiros-detect-project-name.workspace = true
 oneiros-fs.workspace = true
 oneiros-model.workspace = true
 oneiros-outcomes.workspace = true
+oneiros-protocol.workspace = true
 oneiros-service.workspace = true
 oneiros-skill.workspace = true
 oneiros-templates.workspace = true
