--- a/crates/oneiros-service/Cargo.toml
+++ b/crates/oneiros-service/Cargo.toml
@@ -24,5 +24,6 @@ tracing.workspace = true
 
 [dev-dependencies]
 http-body-util.workspace = true
+rusqlite.workspace = true
 tempfile.workspace = true
 tower.workspace = true
