--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 anstream = "0.6.21"
 askama = "0.15"
 axum = "0.8.8"
+bytes = "1.11.1"
 chrono = { version = "0.4", features = ["serde"] }
 clap = { version = "4", features = ["derive"] }
 clap-verbosity-flag = "3"
@@ -31,9 +32,9 @@ oneiros-detect-project-name = { path = "crates/oneiros-detect-project-name", ver
 oneiros-fs = { path = "crates/oneiros-fs", version = "0.0.5" }
 oneiros-link = { path = "crates/oneiros-link", version = "0.0.5" }
 oneiros-model = { path = "crates/oneiros-model", version = "0.0.5" }
-oneiros-protocol = { path = "crates/oneiros-protocol", version = "0.0.5" }
 oneiros-outcomes = { path = "crates/oneiros-outcomes", version = "0.0.5" }
 oneiros-outcomes-derive = { path = "crates/oneiros-outcomes-derive", version = "0.0.5" }
+oneiros-protocol = { path = "crates/oneiros-protocol", version = "0.0.5" }
 oneiros-service = { path = "crates/oneiros-service", version = "0.0.5" }
 oneiros-skill = { path = "crates/oneiros-skill", version = "0.0.5" }
 oneiros-templates = { path = "crates/oneiros-templates", version = "0.0.5" }
