--- a/crates/oneiros-model/Cargo.toml
+++ b/crates/oneiros-model/Cargo.toml
@@ -7,6 +7,7 @@ repository.workspace = true
 license.workspace = true
 
 [dependencies]
+bytes.workspace = true
 chrono.workspace = true
 data-encoding.workspace = true
 oneiros-link.workspace = true
