--- a/crates/oneiros-model/Cargo.toml
+++ b/crates/oneiros-model/Cargo.toml
@@ -12,6 +12,7 @@ data-encoding.workspace = true
 oneiros-link.workspace = true
 postcard.workspace = true
 serde.workspace = true
+serde_json.workspace = true
 thiserror.workspace = true
 uuid.workspace = true
 
