--- a/crates/oneiros-client/Cargo.toml
+++ b/crates/oneiros-client/Cargo.toml
@@ -12,6 +12,7 @@ hyper.workspace = true
 hyper-util.workspace = true
 oneiros-link.workspace = true
 oneiros-model.workspace = true
+serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
