--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 resolver = "2"
 members = [
   "crates/*",
+  "tools/*",
 ]
 
 [workspace.package]
@@ -30,7 +31,6 @@ oneiros-client = { path = "crates/oneiros-client", version = "0.0.5" }
 oneiros-db = { path = "crates/oneiros-db", version = "0.0.5" }
 oneiros-detect-project-name = { path = "crates/oneiros-detect-project-name", version = "0.0.5" }
 oneiros-fs = { path = "crates/oneiros-fs", version = "0.0.5" }
-oneiros-link = { path = "crates/oneiros-link", version = "0.0.5" }
 oneiros-model = { path = "crates/oneiros-model", version = "0.0.5" }
 oneiros-outcomes = { path = "crates/oneiros-outcomes", version = "0.0.5" }
 oneiros-outcomes-derive = { path = "crates/oneiros-outcomes-derive", version = "0.0.5" }
