--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ resolver = "2"
 members = [
   "crates/*",
 ]
+exclude = [
+  "tools/migrate-experience-refs",
+]
 
 [workspace.package]
 version = "0.0.5"
